--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
             <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13</version>
+            <artifactId>junit</artifactId> <version>4.13</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
-    
+
+
 </project>
